<resources>
    <string name="app_name">Party Places</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="home_fragment_label">Home</string>
    <string name="welcome_button_login">Login</string>
    <string name="welcome_button_register">Register</string>
    <string name="login_button_register">Create an account</string>
    <string name="login_button_login">Login</string>
    <string name="editText_hint_username">Username</string>
    <string name="editText_hint_password">Password</string>
    <string name="maps_fragment_label">Map</string>
    <string name="editText_hint_email">Email</string>
    <string name="editText_hint_last_name">Last name</string>
    <string name="editText_hint_first_name">First name</string>
    <string name="register_button_login">Already have an account?</string>
    <string name="register_button_register">Sign up</string>
    <string name="menu_map_title">Map</string>
    <string name="menu_map_tooltip">Show map</string>
    <string name="loading_fragment_label">Loading</string>
    <string name="loading_fragment_text">Loading...</string>
    <string name="menu_sign_out_title">Sign out</string>
    <string name="menu_sign_out_tooltip">Sign out</string>
    <string name="menu_notifications_title">Notifications</string>
    <string name="menu_notifications_tooltip">Notifications</string>
    <string name="pick_image_input_method">Select image source</string>
    <string name="text_label_full_name">Full Name:</string>
    <string name="text_label_uuid">UUID:</string>
    <string name="text_label_email">Email:</string>
    <string name="text_label_username">Username:</string>
    <string name="text_label_password">Password:</string>
    <string name="textView_rank">Rank</string>
    <string name="textView_friends">Friends</string>
    <string name="textView_parties">Parties</string>
    <string name="button_edit_profile_label">Edit Profile</string>
    <string name="register_loading_message">Creating your account...</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="rank_fragment_label">Rank</string>
    <string name="friends_fragment_label">Friends</string>
    <string name="create_party_party_name_label">Name</string>
    <string name="create_party_name_label">Name</string>
    <string name="create_party_theme_label">Theme</string>
    <string name="create_party_date_label">Date</string>
    <string name="create_party_start_time_label">Starts at</string>
    <string name="create_party_end_time_label">Ends at</string>
    <string name="create_party_location_label">Location</string>
    <string name="create_party_create_button">Create the party</string>
    <string name="create_party_fragment_label">Create a new party</string>
    <string name="create_party_cancel_button_label">Cancel</string>
    <string name="my_location">My location</string>
    <string name="create_party_name_empty_message">Name field cannot be empty</string>
    <string name="create_party_theme_empty_message">Theme cannot be empty</string>
    <string name="create_party_date_empty_message">Date cannot be empty</string>
    <string name="create_party_start_time_empty_message">Start time cannot be empty</string>
    <string name="create_party_end_time_empty_message">End time cannot be empty</string>
    <string name="create_party_location_empty_message">Location cannot be empty</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="loading_dialog_label">Loading</string>
    <string name="loading_dialog_description">Description</string>
    <string name="choose_location">Choose location</string>
    <string name="chosen_location">Chosen location:</string>
    <string name="my_parties_label">My parties</string>
    <string name="party_theme">Theme</string>
    <string name="party_guests_label">Guests</string>
    <string name="party_date_label">Date</string>
    <string name="party_theme_label">Theme</string>
    <string name="party_score_label">Score</string>
    <string name="party_location_label">Location</string>
    <string name="party_name_label">Name</string>
    <string name="no_parties">No Parties Yet :(</string>
    <string name="notification_new_party">new-party</string>
    <string name="notification_friend_request_sent">friend-request-sent</string>
    <string name="notification_friend_request_accepted">friend-request-accepted</string>
    <string name="notification_comming_to_party">comming-to-party</string>
    <string name="notification_guest_arrived">guest-arrived</string>
    <string name="notification_new_party_label">New party!</string>
    <string name="new_party_details">Details</string>
    <string name="username">username</string>
</resources>