<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/menu_notifications_title"
        android:tooltipText="@string/menu_notifications_tooltip"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/menu_sign_out_title"
        android:tooltipText="@string/menu_sign_out_tooltip"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>