<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <EditText
        android:id="@+id/register_editText_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/editText_hint_first_name"/>

    <EditText
        android:id="@+id/register_editText_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPersonName"
        android:hint="@string/editText_hint_last_name"/>

    <EditText
        android:id="@+id/register_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/editText_hint_email"/>

    <EditText
        android:id="@+id/register_editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        android:hint="@string/editText_hint_username"/>

    <EditText
        android:id="@+id/register_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="textPassword"
        android:hint="@string/editText_hint_password"/>

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_register"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/purple_200"/>

    <Button
        android:id="@+id/register_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_login"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/transparent"
        android:textColor="@color/cardview_dark_background"
        android:textSize="10dp"/>

</LinearLayout>