<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoadingFragment">

    <fragment
        android:id="@+id/LoadingFragment"
        android:name="com.mosis.partyplaces.ui.LoadingFragment"
        android:label="@string/loading_fragment_label"
        tools:layout="@layout/fragment_loading">

        <action
            android:id="@+id/action_LoadingFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>

        <action
            android:id="@+id/action_LoadingFragment_to_WelcomeFragment"
            app:destination="@id/WelcomeFragment"/>

    </fragment>

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.mosis.partyplaces.ui.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_WelcomeFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />

        <action
            android:id="@+id/action_WelcomeFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />

        <action
            android:id="@+id/action_WelcomeFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>

    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.mosis.partyplaces.ui.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"/>

    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.mosis.partyplaces.ui.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_HomeFragment"
            app:destination="@id/HomeFragment"/>

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.mosis.partyplaces.ui.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_MapFragment"
            app:destination="@id/MapsFragment"/>

    </fragment>

    <fragment
        android:id="@+id/MapsFragment"
        android:name="com.mosis.partyplaces.ui.MapsFragment"
        android:label="@string/maps_fragment_label"
        tools:layout="@layout/fragment_maps">
    <action
        android:id="@+id/action_Maps_to_Friends"
        app:destination="@id/friendsFragment"/>

    <action
    android:id="@+id/action_Maps_to_Rank"
    app:destination="@id/rankFragment"/>
    <action
        android:id="@+id/action_Maps_to_Profile"
        app:destination="@id/profileFragment"/>
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.mosis.partyplaces.ui.FriendsFragment"
        android:label="fragment_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_Friends_To_Maps"
            app:destination="@id/MapsFragment"/>

        <action
            android:id="@+id/action_Friends_to_Rank"
            app:destination="@id/rankFragment"/>
        <action
            android:id="@+id/action_Friends_to_Profile"
            app:destination="@id/profileFragment"/>
    </fragment>
    <fragment
        android:id="@+id/rankFragment"
        android:name="com.mosis.partyplaces.ui.RankFragment"
        android:label="fragment_rank"
        tools:layout="@layout/fragment_rank" >
        <action
            android:id="@+id/action_Rank_To_Maps"
            app:destination="@id/MapsFragment"/>

        <action
            android:id="@+id/action_Rank_to_Friends"
            app:destination="@id/friendsFragment"/>
        <action
            android:id="@+id/action_Rank_to_Profile"
            app:destination="@id/profileFragment"/>
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.mosis.partyplaces.ui.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_Profile_To_Maps"
            app:destination="@id/MapsFragment"/>

        <action
            android:id="@+id/action_Profile_to_Friends"
            app:destination="@id/friendsFragment"/>
        <action
            android:id="@+id/action_Profile_To_Rank"
            app:destination="@id/rankFragment"/>
    </fragment>

</navigation>